--- a/content/daily/2021-05-20.html
+++ b/content/daily/2021-05-20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-08 02:48 -->
+<!-- 2022-11-08 16:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>520快乐</title>
@@ -46,9 +46,9 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb47686b">1. 水水体育课</a></li>
-<li><a href="#org967758d">2. 又是一轮毕业季</a></li>
-<li><a href="#orga5f0046">3. 520 点灯</a></li>
+<li><a href="#orgb422a0a">1. 水水体育课</a></li>
+<li><a href="#org9cd259f">2. 又是一轮毕业季</a></li>
+<li><a href="#org2ed6f7d">3. 520 点灯</a></li>
 </ul>
 </div>
 </nav>
@@ -57,8 +57,8 @@
 虽然84我的节日，不过一大早刷着空间还挺欢乐的，就祝我的朋友们快乐叭😃
 </p>
 
-<div id="outline-container-orgb47686b" class="outline-2">
-<h2 id="orgb47686b"><span class="section-number-2">1.</span> <a href="#orgb47686b">水水体育课</a></h2>
+<div id="outline-container-orgb422a0a" class="outline-2">
+<h2 id="orgb422a0a"><span class="section-number-2">1.</span> <a href="#orgb422a0a">水水体育课</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 果然体侧第一天的体育课超级舒服，虽然50米、引体向上啥的测得不咋的，不过挺舒服的，哈哈。还帮一个女生仰卧起坐的时候按腿，快乐😉。
@@ -66,8 +66,8 @@
 </div>
 </div>
 
-<div id="outline-container-org967758d" class="outline-2">
-<h2 id="org967758d"><span class="section-number-2">2.</span> <a href="#org967758d">又是一轮毕业季</a></h2>
+<div id="outline-container-org9cd259f" class="outline-2">
+<h2 id="org9cd259f"><span class="section-number-2">2.</span> <a href="#org9cd259f">又是一轮毕业季</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 今天是本科毕业生拍照，好多人穿着学士服在图书馆前面的草坪和台阶拍照，
@@ -86,8 +86,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga5f0046" class="outline-2">
-<h2 id="orga5f0046"><span class="section-number-2">3.</span> <a href="#orga5f0046">520 点灯</a></h2>
+<div id="outline-container-org2ed6f7d" class="outline-2">
+<h2 id="org2ed6f7d"><span class="section-number-2">3.</span> <a href="#org2ed6f7d">520 点灯</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 简直是去看人的😓
@@ -105,7 +105,7 @@
 偷偷盗一张亦憨的520全图🤫😉
 </p>
 
-<figure id="orgbcdfaa0">
+<figure id="orga79241f">
 <img src="./2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-20 07:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-21 09:56</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-08 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-08 16:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-20.org">content/daily/2021-05-20.org</a></td></tr>
 </table>
