--- a/content/daily/2022-10-10.html
+++ b/content/daily/2022-10-10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-08 02:48 -->
+<!-- 2022-11-08 16:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>念念不忘, 真的有回响吗?</title>
@@ -46,7 +46,7 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9c285ed">1. Concat Images</a></li>
+<li><a href="#orga0dee27">1. Concat Images</a></li>
 </ul>
 </div>
 </nav>
@@ -56,28 +56,28 @@
 </p>
 
 
-<figure id="org03c53b6">
+<figure id="org093b67d">
 <img src="2022-10-10/1.jpg" alt="1.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>还愿</figcaption>
 </figure>
 
 
-<figure id="org713c3a6">
+<figure id="org1ade8c5">
 <img src="2022-10-10/2.jpg" alt="2.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>起因</figcaption>
 </figure>
 
 
-<figure id="org530a333">
+<figure id="org36a98ed">
 <img src="2022-10-10/3.jpg" alt="3.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>结果</figcaption>
 </figure>
 
-<div id="outline-container-org9c285ed" class="outline-2">
-<h2 id="org9c285ed"><span class="section-number-2">1.</span> <a href="#org9c285ed">Concat Images</a></h2>
+<div id="outline-container-orga0dee27" class="outline-2">
+<h2 id="orga0dee27"><span class="section-number-2">1.</span> <a href="#orga0dee27">Concat Images</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 woc学到一个很方便的东西<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup>, <code>convert</code> yyds!
@@ -107,7 +107,7 @@ convert image1.png image2.png +append result.png
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-10 12:22</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:40</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-08 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-08 16:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-10-10.org">content/daily/2022-10-10.org</a></td></tr>
 </table>
